--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,30 +1,49 @@
 body {
-	font-family: Raleway;
+	background: url("img.jpeg");
+	background-size: cover;
+	background-position: center;
+	font-family: 'Lato', sans-serif;
+	color: #fff;
 }
 
-#brand {
-	font-family: Raleway;
-	margin-left: 1.66%;
-	font-size: 23px;
-	font-weight: 800;
-	text-transform: uppercase;
-	border-bottom: 2px solid #f1f1f1;
-	width: 30%;
-	padding-bottom: 20px;
+html {
+	height: 100%;
 }
 
-img {
-	width: 30%;
-	float: left;
-	margin: 1.66%;
-}
-
-footer {
-	font-weight: 100;
-	font-size: 11.5px;
+#content {
 	text-align: center;
-	text-transform: uppercase;
-	clear: both;
+	padding-top: 15%;
+	text-shadow: 0px 4px 3px rgba(0,0,0,0.4), 
+				 0px 8px 13px rgba(0,0,0,0.1),
+				 0px 18px 23px rgba(0,0,0,0.1);
+}
+
+h1 {
+	font-weight: 700;
+	font-size: 5em;
+}
+
+hr {
+	width: 400px;
+	border-top: 1px solid #f8f8f8;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.navbar {
+	background:transparent;
+	border:none;
+	color: white;
 }
 
 
+.navbar-default .navbar-nav>li>a {
+    color: white;
+}
+
+.navbar-default .navbar-brand {
+    color: white;
+}
+
+.navbar-default .navbar-toggle {
+    border-color: white;
+}
